underline links in content wrapper
fix

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tenderfoot.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tenderfoot.css
@@ -505,6 +505,9 @@ body {
     padding-top: 20px;
     padding-bottom: 20px;
 }
+#wrapper-content a:not([data-toggle]) {
+	text-decoration: underline;
+}
 
 #property-tabs {
     /*
