--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tenderfoot.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tenderfoot.css
@@ -548,7 +548,7 @@ body {
 }
 
 .photo-wrapper img {
-//    height: 100%;
+    height: 100%;
     width: 100%;
     padding: 0 !important;
     margin: 0 !important;
