--- a/gesah-installer/webapp/src/main/webapp/css/search/custom_filters.css
+++ b/gesah-installer/webapp/src/main/webapp/css/search/custom_filters.css
@@ -102,3 +102,12 @@
 	padding-bottom: 10px;
 	padding-left: 4px;
 }
+
+.download-url {
+	padding: 5px 25px 5px;
+}
+
+#downloadIcon {
+	padding-left: 7px;
+	font-size: 14px;
+}
