--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/page-home.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/page-home.css
@@ -123,7 +123,8 @@ a.home-page-help-icon:hover + div {
 }
 
 .home-page-input-group {
-	width: 100%;
+	display: flex;
+	flex-grow: 1;
 	padding-right: unset!important;
 }
 
