--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tenderfoot.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tenderfoot.css
@@ -419,11 +419,11 @@ h3 {
     -moz-osx-font-smoothing: grayscale;
 }
 
-#search-field input.search {
+input.search {
     margin-top: 5px;
 }
 
-#search-field input.search:hover {
+input.search:hover {
     background-color: #4b4b4b;
     border-color: #4b4b4b;
     color: #fafafa;
@@ -667,7 +667,7 @@ ul#header-nav a.log-out {
 #search-field {
     height: 38px;
 }
-#search-field input.search {
+input.search {
     background-color: #af1414;
     color: #fff;
     border: none;
@@ -682,7 +682,6 @@ ul#header-nav a.log-out {
     font-size: 14px;
     border-radius: 0;
     height: 30px;
-
 }
 input.search-vivo {
     float: left;
