--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/page-home.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/page-home.css
@@ -412,6 +412,7 @@ div.faculty-home {
 .home-page-intro > p > a {
   font-size: 1.2rem;
   text-decoration: underline;
+  text-decoration-style: dotted;
 }
 
 #searchFacets {
